align labels and running-bars correctly

--- a/web/css/palettes.css
+++ b/web/css/palettes.css
@@ -52,9 +52,14 @@
 .wv-running-category-label,
 .wv-running-label {
   font-size: 0.7em;
-  position: absolute;
   bottom: 0;
   width: auto;
+}
+.wv-palettes-max,
+.wv-palettes-min,
+.wv-running-category-label,
+.wv-running-label {
+  position: absolute;
 }
 
 .wv-palettes-max,
@@ -117,7 +122,7 @@
 }
 
 .bank div .wv-palettes-panel .wv-running-bar {
-  bottom: 11px;
+  bottom: 15px;
   width: 1px;
   height: 12px;
   background: #000;
@@ -171,7 +176,7 @@
   width: 100%;
   height: 10px;
   border: 1px solid #404040;
-  margin-bottom: 15px;
+  margin-bottom: 13px;
 }
 
 .bank .wv-palettes-colorbar:hover {
